# panorama-explorer

./: Cargo.toml  README.md  run.sh  serve.sh
src/: color.frag  control_state.rs  entities.rs  gui_controls.rs  lib.rs  main.rs  photo.rs  read_pto.rs  render.rs  texture.frag  texture_dewarp.frag  texture_dewarp2.frag  viewport_geometry.rs  world_rectangle.rs  zoom.rs
src/render/: colors.rs  map_overlay.rs  markers.rs  photo.rs  primitives.rs  render_states.rs
src/shaders/: average_effect.frag  copy_photos.frag  texture.frag  texture_dewarp2.frag
