[package]
name = "panorama_tool"
version = "0.1.0"
authors = ["kklibo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = "0.3.0"
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.1"
tri-mesh = "0.5.0"
nom = "6.1.0"

[dev-dependencies]
assert_matches = "1.4.0"
