[package]
name = "panorama_tool"
version = "0.1.0"
authors = ["kklibo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
#three-d = "0.5.0"
three-d = {path = "../../temp_repos/three-d/"}
log = "0.4"
cgmath = { version = "0.17", features = ["serde"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.1"
env_logger = "0.8.2"
tri-mesh = "0.5.0"
nom = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
assert_matches = "1.4.0"
assert_approx_eq = "1.1.0"